syntax = "proto3";

package k1s0.system.vault.v1;

option go_package = "github.com/k1s0-platform/system-proto-go/vault/v1;vaultv1";

import "google/protobuf/timestamp.proto";
import "v1/common.proto";

service VaultService {
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
  rpc SetSecret(SetSecretRequest) returns (SetSecretResponse);
  rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse);
  rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse);
}

message GetSecretRequest {
  string path = 1;
  string version = 2;
}

message GetSecretResponse {
  map<string, string> data = 1;
  int64 version = 2;
  google.protobuf.Timestamp created_at = 3;
}

message SetSecretRequest {
  string path = 1;
  map<string, string> data = 2;
}

message SetSecretResponse {
  int64 version = 1;
  google.protobuf.Timestamp created_at = 2;
}

message DeleteSecretRequest {
  string path = 1;
  repeated int64 versions = 2;
}

message DeleteSecretResponse {
  bool success = 1;
}

message ListSecretsRequest {
  string path_prefix = 1;
}

message ListSecretsResponse {
  repeated string keys = 1;
}
